Wed Jul 11 14:52:02 UTC 2007  Adam Mitz  <mitza@ociweb.com>

        * templates/nmake.mpd:
        * templates/nmakedll.mpt:
        * templates/nmakeexe.mpt:

          Moved the default libraries advapi32.lib and user32.lib out of the
          template and into the template-input files using the variable name
          systemlibs.  This allows -value_template systemlibs+=FOO to work.

Fri Jun 29 18:24:22 UTC 2007  Adam Mitz  <mitza@ociweb.com>

        * modules/Depgen/Driver.pm:

          Removed assigment of () to %types since it was sometimes
          clobbering the value already there (from the BEGIN block).

        * modules/Depgen/NMakeObjectGenerator.pm:
        * depgen.pl:

          Generate dependencies targeting object files instead of cpp files.
          This matches how it's done for GNU make.

        * modules/NMakeWorkspaceCreator.pm:

          Provide output regarding which projects are being built.

        * templates/nmake.mpd:

          Changed how intermediate and ouptut directories are handled, to
          match the change to make.mpd in:
          Wed Jan 24 19:04:58 UTC 2007  Chad Elliott  <elliott_c@ociweb.com>

Wed Jun 27 11:28:50 UTC 2007  Chad Elliott  <elliott_c@ociweb.com>

        * config/boost_base.mpb:

          Use a new environment variable, BOOST_ROOT_LIB, to determine the
          location of boost libraries.  If this isn't set, it will be
          expanded to $(BOOST_ROOT)/lib which is the default location.

        * docs/README:
        * modules/WorkspaceCreator.pm:

          Added a new workspace feature, associate, that associates a name
          with one or more directories.  It does not add directories to the
          workspace, it only makes an association.

        * modules/AutomakeWorkspaceCreator.pm:

          Utilize the associate feature to allow conditional building of
          groups of directories.

        * docs/USAGE:
        * modules/Options.pm:
