@@ -948,6 +948,17 @@ sub update_template_variable {
     $self->{'addtemp_state'} = \%state;
   }
 
+  ## If the name that is used within a specific is a mapped keyword
+  ## then we need to translate it into the mapped keyword as it will
+  ## be used by the TemplateParser.
+  if ($values[1] =~ /(.*::)(.*)/) {
+    my($base)   = $1;
+    my($mapped) = $self->{'valid_names'}->{$2};
+    if (defined $mapped && UNIVERSAL::isa($mapped, 'ARRAY')) {
+      $values[1] = $base . 'custom_type->' . $$mapped[1];
+    }
+  }
+
   ## Now modify the addtemp values
   my($atemp) = $self->get_addtemp();
   $self->information("'$values[1]' was used as a template modifier.");
