@@ -1,3 +1,10 @@
+Mon Jul 30 11:33:43 UTC 2007  Chad Elliott  <elliott_c@ociweb.com>
+
+        * modules/ProjectCreator.pm:
+
+          Support setting a mapped custom defined keyword as a scoped
+          template variable.
+
 Wed Jul 11 14:52:02 UTC 2007  Adam Mitz  <mitza@ociweb.com>
 
         * templates/nmake.mpd:
